# cloudflare-dns-gui

./: .gitignore  .releaserc.yml  CHANGELOG.md  README.md  SECURITY.md  biome.json  bun.lockb  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: dependabot-automation.yml  dependabot-merge.yml  release.yml  rust.yml  scorecard.yml
src/: App.jsx  App.tsx  Navbar.jsx  Navbar.tsx  Toaster.tsx  TokenProvider.tsx  ZoneProvider.tsx  index.tsx  lib.js  lib.ts  types.ts
src-tauri/: Cargo.toml  Tauri.toml  build.rs
src-tauri/bindings/: CloudflareAccount.ts  CloudflareListZonesResponse.ts  CloudflareMessage.ts  CloudflareOrganizationUserDetails.ts  CloudflareOwner.ts  CloudflarePlan.ts  CloudflareResponse.ts  CloudflareResponseWithInfo.ts  CloudflareResultInfo.ts  CloudflareTenant.ts  CloudflareTenantUnit.ts  CloudflareUserDetailsResponse.ts  CloudflareZoneMetadata.ts  CustomUserDetails.ts  DNSRecord.ts  Meta.ts
src-tauri/src/: api.rs  cloudflare.rs  commands.rs  lib.rs  main.rs  models.rs
src/providers/: TokenContext.tsx  UserContext.tsx  ZoneContext.tsx
