[package]
name = "cloudflare-dns-gui"
version = "1.0.0"
description = "An app to manage Cloudflare DNS records"
authors = ["Nicholas Westerhausen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["config-toml"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12"
tracing = "0.1.40"
chrono = "0.4.37"
log = "0.4.21"
tracing-subscriber = "0.3.18"

# Some very strict lints.
[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_code = "warn"
unreachable_patterns = "warn"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
used_underscore_binding = "allow"
