[package]
name = "cloudflare-dns-gui"
version = "1.0.0"
description = "An app to manage Cloudflare DNS records"
authors = ["Nicholas Westerhausen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.12", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.15", features = ["config-toml"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.cloudflare]
git = "https://github.com/cloudflare/cloudflare-rs.git"
rev = "cc78fb62f8142eeb7924fc3b934bfef19ddaf124"

# Some very strict lints.
[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_code = "warn"
unreachable_patterns = "warn"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
